Add compaction templates and CompactionJobQueue (#18402)
Functional changes
-------------------
- Reset the compaction job queue every 15 minutes by default.
- Whenever a compaction task finishes, check if jobs pending in the queue can be launched.
- When a compaction supervisor is stopped, remove its jobs from the queue.
- When a compaction supervisor is started (or restarted), create jobs for it and add them to the queue.

Classes
--------
- Add `BatchIndexingJob` which may contain either a `ClientTaskQuery` or a `ClientSqlQuery` (for MSQ jobs).
- Add `BatchIndexingJobTemplate` that can create jobs for a given source and destination
- Add `CompactionConfigBasedJobTemplate` which implements `CompactionJobTemplate`
- Update `CompactionSupervisor` to create jobs using templates
- Add `CompactionJobQueue` to create and submit compaction jobs to the Overlord

Refactor for reuse
------------------
- Move common code from `CompactSegments` to `CompactionSlotManager`, `CompactionSnapshotBuilder`
- Update `CompactionStatus`, `CompactionStatusTracker` and `DataSourceCompactibleSegmentIterator`